--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -19,7 +19,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="160dp"
             android:background="@drawable/frontcard">
             <ImageView
                 android:layout_width="match_parent"
@@ -57,10 +57,48 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/txt_userdetails"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/white"
+                            android:text="Customer Name :"
+                            android:textSize="12dp"
+                            android:layout_weight="1"
+                            android:gravity="start"/>
+                        <TextView
+                            android:id="@+id/txt_userid"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/white"
+                            android:paddingLeft="7dp"
+                            android:paddingTop="5dp"
+                            android:textAllCaps="false"
+                            android:layout_weight="1"
+                            android:text=""
+                            android:textSize="12dp"
+                            android:gravity="right"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
@@ -85,44 +123,6 @@
                         android:layout_weight="1"
                         android:textStyle="bold" />
 
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:gravity="center"
-                            android:layout_weight="1">
-                            <TextView
-                                android:id="@+id/txt_userdetails"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@android:color/white"
-                                android:text="Customer Name :"
-                                android:textSize="12dp"
-                                android:layout_weight="1"
-                                android:gravity="start"/>
-                            <TextView
-                                android:id="@+id/txt_userid"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@android:color/white"
-                                android:paddingLeft="7dp"
-                                android:paddingTop="5dp"
-                                android:textAllCaps="false"
-                                android:layout_weight="1"
-                                android:text=""
-                                android:textSize="12dp"
-                                android:gravity="right"/>
-
-                        </LinearLayout>
                 </LinearLayout>
 
 
@@ -159,18 +159,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <ImageButton
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_alignParentRight="true"
-                        android:visibility="visible"
-                        android:tint="@color/grey1"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:background="@drawable/select_amnt_icon"/>
 
                     <TextView
-                        android:text="@string/select_account"
+                        android:text="Account"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
@@ -187,17 +178,53 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="10dp"
                     android:orientation="vertical">
+<!--
+                    <LinearLayout
+                        android:id="@+id/llacc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/view_bg"
+                        android:orientation="horizontal">
+
+
+                        <TextView
+                            android:id="@+id/txt_product"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Select Account"
+                            android:layout_weight="1"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="10dp"
+                            android:gravity="center_horizontal"/>
+                        <androidx.cardview.widget.CardView
+                        android:layout_weight="4"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp"
+                        app:cardBackgroundColor="@color/google_blue"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_arrow_right_white"
+                            android:scaleType="center"
+                            android:background="@android:color/transparent"/>
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+-->
 
                     <Spinner
-                        android:id="@+id/spn_account_type"
+                        android:id="@+id/spnAccountNum"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_gravity="start"
-                        android:layout_marginTop="2dp"
                         android:gravity="start"
-                        android:paddingLeft="5dp"
                         android:background="@drawable/underline_drawable"
                         android:popupBackground="#cccccc"
                         android:spinnerMode="dialog"/>
