--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -106,12 +106,13 @@
 
 
                             <TextView
+                                android:id="@+id/tvwalletbal"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_margin="10dp"
                                 android:gravity="center"
-                                android:text="TOTAL BALANCE"
+                                android:text="WALLET BALANCE ON "
                                 android:textColor="@android:color/white"
                                 android:textSize="13dp" />
                             <TextView
@@ -260,7 +261,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Load Money"
+                        android:text="Top Up Wallet"
                         android:textStyle="bold"
                         android:layout_gravity="center"
                         android:gravity="center"
@@ -275,7 +276,7 @@
                         android:gravity="center"
                         android:textStyle="bold"
                         android:layout_weight="1"
-                        android:text="Transactions"
+                        android:text="Wallet Statement"
                         android:background="@drawable/toggle3"
                         android:src="@drawable/ic_right_arrow"/>
                 </LinearLayout>
@@ -496,13 +497,15 @@
                                     android:layout_gravity="center_vertical"
                                     android:layout_marginLeft="2dp"
                                     android:layout_marginTop="5dp"
+                                    android:layout_marginRight="2dp"
                                     android:layout_marginBottom="5dp"
                                     android:layout_weight="3.5"
+                                    android:gravity="center_horizontal"
                                     android:text="Dr/Cr"
                                     android:textAlignment="gravity"
                                     android:textColor="@color/colorPrimaryDark"
                                     android:textSize="14sp"
-                                    android:textStyle="bold" />
+                                    android:textStyle="bold"/>
 
 
                             </LinearLayout>
